improved example code

--- a/examples/html/index.html
+++ b/examples/html/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <h1>Data from WebSocket</h1>
+<div class="button-container">
+    <button id="play-button", class="play-button">▶</button> <!-- Unicode play icon -->
+</div>
 <table id="data-table">
     <thead>
     <tr>
